--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,4 @@
-develop:
-sinpi, cospi, tanpiの整備.
-asinpi, acospi, atanpiの整備.
+release/2026-01-02:
+- 三角関数関係
+    - sinpi, cospi, tanpiの整備.
+    - asinpi, acospi, atanpiの整備.
